--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+.cont{
+    height: 59px;
+}
+
 .background{
     display: flex;
     /* justify-content: center; */
@@ -83,15 +87,26 @@ footer{
     bottom: 0;
     background-color: #fff;
     align-items: center;
+    justify-content: space-around;
+    text-align: center;
 
 }
 
-.cont{
-    height: 59px;
-}
 
-.search-img{
+
+.icons-align{
     display: block;
     width: 20px;
     height: 20px;
+    margin: auto;
 }
+
+.icons-div {
+    text-align: center;
+}
+
+span {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
