--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,16 @@ footer{
     width: 20px;
     height: 20px;
     margin: auto;
+    
 }
 
 .icons-div {
     text-align: center;
+    padding: 10px;
 }
 
 span {
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
 }
 
