--- a/css/style.css
+++ b/css/style.css
@@ -136,13 +136,32 @@ form {
     margin-bottom: 3px;
 }
 
-.icon-input {
-    background-image: url('../img/search-interface-symbol.png');
+
+
+.icon-input-circle{
+    background-image: url('../img/oval.png');
+   
+}
+
+.icon-input-local{
+    background-image: url('../img/location.png');
+}
+
+input.icon-input-date{
+    background-image: url('../img/icons8-date-64.png');
     background-size: 15px;
+}
+
+
+
+.icon-input {
+    background-size: 13px;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
 }
+
+
 
 
 input {
@@ -161,6 +180,13 @@ input[type=button]{
     border-radius: 7px;
     height: 45px;
     color: #fff;
+    background-image: url('../img/search-interface-symbol.png');
+    background-size: 17px;
+    background-position: 106px 12px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
 }
+
+
 
 
