--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,36 @@ input[type=button]{
     padding: 12px 20px 12px 40px;
 }
 
+@media (min-width: 720px){
 
+    .background{
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        height: 100%;
+        background-color: #ff0778;
+        flex-direction: column;
+        gap:14%;
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: cover;
+        background-color: #e45776;
+        background-image: url(https://dals0gb6i1pll.cloudfront.net/img/banner-mobile-buser.e1bda3c.png),linear-gradient(135deg,#ad1457,#f11075);
+    }
+    
+
+.texto{
+    width: 343px;
+    height: 100px;
+    padding-top: 20px;
+    font-size: 30px;
+    color: #fff;
+    font-family:'Roboto', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+
+}
+    
+}
 
 
